footer icon and text flex or grid wrap solved

--- a/styles/style.css
+++ b/styles/style.css
@@ -671,12 +671,20 @@ footer{
 }
 
 .footer-container{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  width: 60%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  width: 80%;
   gap: 16px;
   padding-bottom: 24px;
+}
+
+.footer-icon-text{
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-two-content{
+  justify-content: center;
 }
 
 
